# kelvin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FAILURES.md  FALLBACKS.md  LICENSE  README.md  kelvin.yaml  pyproject.toml
.github/workflows/: publish.yml
cases/: artisanflow.md  envelop.md  freakinggenius.md  freakinggenius_clean.md  freakinggenius_messy.md  freakinggenius_pitchdeck.md  meridian.md  northpass.md  rhodium.md
docs/: RELEASE_NOTES_v0.2.0.md  kelvin_demo.ipynb  kelvinspec.md  whitepaper.md
experiments/: pillar1_va_api_final.md  pillar1_va_api_partial.md  pillar1_va_api_v030.md
experiments/eos_v2_2_certification/: CERTIFICATION_BRIEF.md
experiments/pillar2_decomposition_demo/: README.md  report.json
experiments/pillar2_decomposition_demo/artisanflow/: report.json
experiments/pillar2_decomposition_demo/envelop/: report.json
experiments/pillar2_decomposition_demo/freakinggenius/: report.json
experiments/tier3/: .gitignore  README.md  build_table.py  run.sh
harness/: kelvin_runner.mjs
src/kelvin/: __init__.py  __main__.py  check.py  cli.py  config.py  event_log.py  fs.py  init_wizard.py  messages.py  parser.py  retry.py  runner.py  scorer.py  types.py
tests/: test_cache.py  test_check.py  test_config.py  test_dry_run.py  test_event_log.py  test_forecast.py  test_messages.py  test_noise_floor.py  test_parser.py  test_perturbations_pad.py  test_perturbations_pad_length.py  test_perturbations_reorder.py  test_perturbations_swap.py  test_retry.py  test_retry_wiring.py  test_rng.py  test_runner.py  test_scorer.py
(+94 files in other folders)
